fix(swag docs): generate docs.go
